numeric.c
@@ -552,18 +552,38 @@ num_sadded(VALUE x, VALUE name)
     UNREACHABLE;
 }
 
+#if 0
 /*
- * Numerics are immutable values, which should not be copied.
+ *  call-seq:
+ *     num.clone(freeze: true) -> num
  *
- * Any attempt to use this method on a Numeric will raise a TypeError.
+ *  Returns the receiver.
+ *  _freeze_ cannot be +false+.
  */
 static VALUE
-num_init_copy(VALUE x, VALUE y)
+num_clone(int argc, VALUE *argv, VALUE x)
 {
-    rb_raise(rb_eTypeError, "can't copy %"PRIsVALUE, rb_obj_class(x));
-
-    UNREACHABLE;
+    return rb_immutable_obj_clone(argc, argv, x);
 }
+#else
+# define num_clone rb_immutable_obj_clone
+#endif
+
+#if 0
+/*
+ *  call-seq:
+ *     num.dup -> num
+ *
+ *  Returns the receiver.
+ */
+static VALUE
+num_dup(VALUE x)
+{
+    return x;
+}
+#else
+# define num_dup num_uplus
+#endif
 
 /*
  *  call-seq:
@@ -5222,8 +5242,9 @@ Init_Numeric(void)
 
     rb_define_method(rb_cNumeric, "singleton_method_added", num_sadded, 1);
     rb_include_module(rb_cNumeric, rb_mComparable);
-    rb_define_method(rb_cNumeric, "initialize_copy", num_init_copy, 1);
     rb_define_method(rb_cNumeric, "coerce", num_coerce, 1);
+    rb_define_method(rb_cNumeric, "clone", num_clone, -1);
+    rb_define_method(rb_cNumeric, "dup", num_dup, 0);
 
     rb_define_method(rb_cNumeric, "i", num_imaginary, 0);
     rb_define_method(rb_cNumeric, "+@", num_uplus, 0);
